<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/updateDefaultDialogUpdateAllButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_all" />

    <Button
        android:id="@+id/updateDefaultDialogUpdateExistingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_all_with_default_values" />

    <Button
        android:id="@+id/updateDefaultDialogUpdateFutureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_only_future_reminders" />
</LinearLayout>