<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/settings_page_margins"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/firstFragmentSearchView"
            android:hint="@string/search_reminders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/firstFragmentSortButton"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#0000"
            android:contentDescription="@string/sort_reminders"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:icon="@drawable/sort_icon"
            app:iconGravity="textEnd"
            app:iconSize="28sp"
            app:iconTint="@color/sort_icon_tint" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/firstFragmentSelectAllSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:text="@string/deselect_all"
            app:switchPadding="3dp" />
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:contentDescription="@string/reminders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/firstFragmentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/grantPermissionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/grant_permissions" />
</LinearLayout>