<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settings_page_margins"
        android:layout_marginTop="@dimen/settings_page_margins"
        android:layout_marginEnd="@dimen/settings_page_margins"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reminderListItemNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/settings_page_margins"
            android:layout_weight="1"
            android:text="Tait Butterfield" />

        <TextView
            android:id="@+id/reminderListItemBirthdayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/settings_page_margins"
            android:layout_weight="0.2"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="Sep 16"
            android:textSize="10sp"
            app:drawableStartCompat="@drawable/cake_icon" />

        <TextView
            android:id="@+id/reminderListItemReminderDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/settings_page_margins"
            android:layout_weight="0.2"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="Sep 16"
            android:textSize="10sp"
            app:drawableStartCompat="@drawable/timer_icon" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/reminderListItemSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reminderListItemEditLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/settings_page_margins"
        android:orientation="horizontal"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/settings_page_margins"
            android:layout_weight="1"
            android:hint="@string/days_before_birthday_to_remind"
            app:counterMaxLength="2"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reminderListItemDaysBeforeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/days_before_birthday_to_remind"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reminderListItemDoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="@dimen/settings_page_margins"
            android:text="@string/done" />

        <Button
            android:id="@+id/reminderListItemDeleteButton"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/delete_reminder"
            android:padding="6dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            app:icon="@drawable/delete_icon_light"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconSize="28sp"
            app:iconTint="#E91E63" />

    </LinearLayout>

</LinearLayout>